testsuite/poke.pkl/acons-diag-9.pk
/* { dg-do compile } */

any[3] (); /* { dg-error ".*\n.*not supported" } */
